# project-euler

./: .gitignore  LICENSE  README.md
clojure/: .gitignore  GNUmakefile  README.md  build.clj  deps.edn  project.clj
clojure/dev/: user.clj
clojure/resources/: min-factor-tbl.edn
clojure/src/project_euler/: core.clj
clojure/src/project_euler/lib/: math.clj  util.clj
clojure/src/project_euler/sol/: p0001.clj  p0002.clj  p0003.clj  p0004.clj  p0005.clj  (+95 more)
doc/: README.md  README_ja.md
doc/en/: p0001.md  p0002.md  p0003.md  p0004.md  p0005.md  p0006.md  p0007.md  p0008.md  p0009.md  p0010.md  p0011.md  p0012.md  p0013.md  p0014.md  p0015.md  p0016.md  p0017.md  p0018.md  p0019.md  p0020.md  p0021.md  p0022.md  p0023.md  p0024.md  p0025.md  p0026.md  p0027.md  p0028.md  p0029.md  p0030.md  p0031.md  p0032.md  p0033.md  p0034.md  p0035.md  p0036.md  p0037.md  p0038.md  p0039.md  p0040.md  (+60 more)
doc/ja/: p0001.md  p0002.md  p0003.md  p0004.md  p0005.md  p0006.md  p0007.md  p0008.md  p0009.md  p0010.md  p0011.md  p0012.md  p0013.md  p0014.md  p0015.md  p0016.md  p0017.md  p0018.md  p0019.md  p0020.md  p0021.md  p0022.md  p0023.md  p0024.md  p0025.md  p0026.md  p0027.md  p0028.md  p0029.md  p0030.md  p0031.md  p0032.md  p0033.md  p0034.md  p0035.md  p0036.md  p0037.md  p0038.md  p0039.md  p0040.md  (+60 more)
docs/: index.html  sitemap.xml
docs/css/: style.css
docs/en/: index.html  index.xml  sitemap.xml
docs/en/categories/: index.html  index.xml
docs/en/tags/: index.html  index.xml
docs/ja/: index.html  index.xml  sitemap.xml
docs/ja/categories/: index.html  index.xml
docs/ja/pm/: index.html  index.xml
docs/ja/tags/: index.html  index.xml
go/: .gitignore  GNUmakefile  README.md  go.mod  main.go  solve.sh
go/internal/mylib/: combinatorics.go  digits.go  factor.go  math.go  prime.go  util.go
haskell/: GNUmakefile  README.md  euler.cabal  solve.sh
haskell/app/: Main.hs
haskell/src/: Sol.hs
haskell/src/Mylib/: Combinatorics.hs  Factor.hs  Math.hs  MinFactor.hs  Prime.hs  Util.hs
haskell/src/Mylib/Heap/: Internal.hs  LeftistHeap.hs
haskell/src/Sol/: P0001.hs  P0002.hs  P0003.hs  P0004.hs  P0005.hs  P0006.hs  P0007.hs  P0008.hs  P0009.hs  P0010.hs  P0011.hs  P0012.hs  P0013.hs  P0014.hs  P0015.hs  P0016.hs  P0017.hs  P0018.hs  P0019.hs  P0020.hs  P0021.hs  P0022.hs  P0023.hs  P0024.hs  P0025.hs  P0026.hs  P0027.hs  P0028.hs  P0029.hs  P0030.hs  P0031.hs  P0032.hs  P0033.hs  P0034.hs  P0035.hs  P0036.hs  P0037.hs  P0038.hs  P0039.hs  P0040.hs  (+60 more)
haskell/test/Sol/: P0001Spec.hs  P0002Spec.hs  P0003Spec.hs  P0004Spec.hs  P0005Spec.hs  P0006Spec.hs  P0007Spec.hs  P0008Spec.hs  P0009Spec.hs  P0010Spec.hs  P0011Spec.hs  P0012Spec.hs  P0013Spec.hs  P0014Spec.hs  P0015Spec.hs  P0016Spec.hs  P0017Spec.hs  P0018Spec.hs  P0019Spec.hs  P0020Spec.hs  P0021Spec.hs  P0022Spec.hs  P0023Spec.hs  P0024Spec.hs  P0025Spec.hs  P0026Spec.hs  P0027Spec.hs  P0028Spec.hs  P0029Spec.hs  P0030Spec.hs  P0031Spec.hs  P0032Spec.hs  P0033Spec.hs  P0034Spec.hs  P0035Spec.hs  P0036Spec.hs  P0037Spec.hs  P0038Spec.hs  P0039Spec.hs  P0040Spec.hs  (+60 more)
julia/: GNUmakefile  README.md  euler.jl  solve.sh
julia/Euler/: GNUmakefile  Project.toml
julia/Euler/src/: Euler.jl  GNUmakefile
julia/Euler/test/: runtests.jl  tc00.jl
ocaml/: .gitignore  .ocamlformat  GNUmakefile  README.md  dune-project  p0001.ml  p0002.ml  p0003.ml  p0004.ml  p0005.ml  p0006.ml  p0007.ml  p0008.ml  p0009.ml  p0010.ml  p0011.ml  p0012.ml  p0013.ml  p0014.ml  p0015.ml  p0017.ml  p0019.ml  p0020.ml  p0023.ml  p0024.ml  p0025.ml  p0026.ml  p0027.ml  p0029.ml  p0030.ml  p0031.ml  p0032.ml  p0034.ml  p0035.ml  p0037.ml  p0038.ml  p0040.ml  p0044.ml  p0045.ml  p0046.ml  (+35 more)
ocaml/lib/: algo_x.ml  algo_x.mli  aw_perm.ml  aw_perm.mli  bitarray.ml  bitarray.mli  dune  eratosthenes.ml  eratosthenes.mli  math.ml  math.mli  minFactors.ml  minFactors.mli  prioQueue.ml  prioQueue.mli  prioQueue_intf.ml  task.ml  task.mli  util.ml  util.mli
ocaml/src/: dune  p0001.ml  p0002.ml  p0003.ml  p0004.ml  p0005.ml  p0006.ml  p0007.ml  p0008.ml  p0009.ml  p0010.ml  p0011.ml  p0012.ml  p0013.ml  p0014.ml  p0015.ml  p0016.ml  p0017.ml  p0018.ml  p0019.ml  p0020.ml  p0021.ml  p0022.ml  p0023.ml  p0024.ml  p0025.ml  p0026.ml  p0027.ml  p0028.ml  p0029.ml  p0030.ml  p0031.ml  p0032.ml  p0033.ml  p0034.ml  p0035.ml  p0036.ml  p0037.ml  p0038.ml  p0039.ml  (+65 more)
python/: .gitignore  GNUmakefile  README.md  pyproject.toml  run-unittest.sh  setup.cfg  solve.py
python/euler/: GNUmakefile  __init__.py  main.py
python/euler/lib/: GNUmakefile
python/euler/lib/prime/: GNUmakefile  __init__.py  eratosthenes.py  generator.py  isprime.py  mp_sieve.py  primes.py  sieve.py  simple_sieve.py
python/euler/lib/resource/: __init__.py  main.py
python/euler/lib/util/: __init__.py  digits.py  factorize.py  figurate_num.py  heap_queue.py  list.py  misc.py
python/euler/problems/: GNUmakefile  p0001.py  p0003.py  p0004.py
python/tests/: GNUmakefile
rust/: Cargo.toml  GNUmakefile  README.md  solve.sh
rust/src/: GNUmakefile  lib.rs  math.rs
rust/src/math/: primes.rs
typescript/: GNUmakefile  README.md  solve.sh
typescript/euler/: GNUmakefile  deno.json  main.ts
typescript/euler/lib/: asset.ts  factor.ts  math.ts  mod.ts  prime.ts  primes.ts  rational.ts  util.ts
typescript/euler/test/: GNUmakefile  p0001_test.ts  p0002_test.ts  p0003_test.ts  p0004_test.ts  p0005_test.ts  p0006_test.ts  p0007_test.ts  p0008_test.ts  p0009_test.ts  p0010_test.ts  p0011_test.ts  p0012_test.ts  p0013_test.ts  p0014_test.ts  p0015_test.ts  p0016_test.ts  p0017_test.ts  p0018_test.ts  p0019_test.ts  p0020_test.ts  p0021_test.ts  p0022_test.ts  p0023_test.ts  p0024_test.ts  p0025_test.ts  p0026_test.ts  p0027_test.ts  p0028_test.ts  p0029_test.ts  p0030_test.ts  p0031_test.ts  p0032_test.ts  p0033_test.ts  p0034_test.ts  p0035_test.ts  p0036_test.ts  p0037_test.ts  p0038_test.ts  p0039_test.ts  (+61 more)
(+407 files in other folders)
